Radio button sorted

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             </select>
         <div class="name">
         <label for="Recommendation">Would you recommend us to friends and associates?</label> <br>
-            <input type="radio" name="yes" id="yes" class="clicks">
+            <input type="radio" name="recommend" id="yes" class="clicks">
             <label for="yes">Definitely</label> <br>
-            <input type="radio" name="possibly" id="possibly" class="clicks">
+            <input type="radio" name="recommend" id="possibly" class="clicks">
             <label for="possibly">Maybe</label> <br>
-            <input type="radio" name="probably" id="probably" class="clicks">
+            <input type="radio" name="recommend" id="probably" class="clicks">
             <label for="probably">Not sure</label> <br>
-            <input type="radio" name="No" id="No" class="clicks">
+            <input type="radio" name="recommend" id="No" class="clicks">
             <label for="No">Certainly Not</label> <br>
         </div>
         <div class="value">
